--- a/views/layout.haml
+++ b/views/layout.haml
@@ -15,30 +15,31 @@
     %meta{ name: "author", content: "" }
 
     / Le styles
-    %link{ rel: 'stylesheet', href: 'https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cerulean/bootstrap.min.css', media: 'screen' }
+    %link{ rel: 'stylesheet', href: 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', media: 'screen' }
+    %link{ rel: 'stylesheet', href: 'https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/3.3.7+1/css/sb-admin-2.min.css', media: 'screen' }
+    %link{ rel: 'stylesheet', href: 'https://cdnjs.cloudflare.com/ajax/libs/metisMenu/2.5.2/metisMenu.min.css', media: 'screen' }
     %link{ rel: 'stylesheet', href: 'https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css', media: 'screen' }
     /[if lt IE 9] <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     /[if lt IE 9] <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-    %style
-      body { padding-top: 60px; }
-  %body
-    = partial('navbar', locals: { title: (defined?(title) ? title : 'ProxES') })
-    .container-fluid
-      .row
-        .col-md-3.sidebar
-          = partial('sidebar')
 
-        .col-md-9
-          = partial('notifications')
-          = yield
-          %footer.footer.text-muted.text-center
-            %hr
-            .copyright
-              :plain
-                &copy; <script>document.write(new Date().getFullYear())</script>, JadeIT
+  %body
+    #wrapper
+      = partial('navbar', locals: { title: (defined?(title) ? title : 'ProxES') })
+      #page-wrapper
+        .row
+          .col-md-12
+            = partial('notifications')
+            = yield
+        %footer.footer.text-muted.text-center
+          %hr
+          .copyright
+            :plain
+              &copy; <script>document.write(new Date().getFullYear())</script>, JadeIT
 
 
     / Placed at the end of the document so the pages load faster
     %script{ type: 'text/javascript', src: '/assets/js/bundle.js' }
+    %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/3.3.7+1/js/sb-admin-2.min.js' }
     %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js' }
+    %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/metisMenu/2.5.2/metisMenu.min.js' }
     %script{ type: 'text/javascript', src: 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' }
