feat: Clean up, expand user roles functionality

--- a/views/partials/sidebar.haml
+++ b/views/partials/sidebar.haml
@@ -9,6 +9,10 @@
         %a{ href: '/_proxes/users' }
           %i.fa.fa-user.fa-fw
           Users
+      %li
+        %a{ href: '/_proxes/user-roles' }
+          %i.fa.fa-group.fa-fw
+          User Roles
   - else
     %li.active
       %a{ href: '/auth/identity' }
