chore: Add page title to layout

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -28,6 +28,8 @@
       #page-wrapper
         .row
           .col-md-12
+            -if defined? title
+              %h1.page-header= title
             = haml :'partials/notifications'
             = yield
         %footer.footer.text-muted.text-center
