chore: Changes to make it backward compatible with Ruby 1.9.3

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,17 +2,17 @@
 %html{ lang: 'en' }
   %head
     %meta{ charset: 'utf-8' }
-    %meta{ 'http-equiv': "X-UA-Compatible", content: "IE=edge,chrome=1" }
-    %meta{ name: "viewport", content: "width=device-width, initial-scale=1" }
-    %link{ rel: "apple-touch-icon", sizes: "76x76", href: '/assets/img/apple-icon.png' }
+    %meta{ 'http-equiv' => 'X-UA-Compatible', 'content' => 'IE=edge,chrome=1' }
+    %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1' }
+    %link{ rel: 'apple-touch-icon', sizes: '76x76', href: '/assets/img/apple-icon.png' }
 
     %title
       ProxES
       - if defined? title
         = "- #{title}"
 
-    %meta{ name: "description", content: "" }
-    %meta{ name: "author", content: "" }
+    %meta{ name: 'description', content: '' }
+    %meta{ name: 'author', content: '' }
 
     / Le styles
     %link{ rel: 'stylesheet', href: 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', media: 'screen' }
