--- a/views/partials/navbar.haml
+++ b/views/partials/navbar.haml
@@ -4,7 +4,7 @@
       ProxES
       - if defined? title
         = "- #{title}"
-    %button.navbar-toggle.collapsed{ type: 'button', 'data-toggle': 'collapse', 'data-target': '#navbar', 'aria-expanded': 'false', 'aria-controls': 'navbar' }
+    %button.navbar-toggle.collapsed{ 'type' => 'button', 'data-toggle' => 'collapse', 'data-target' => '#navbar', 'aria-expanded' => 'false', 'aria-controls' => 'navbar' }
       %span.sr-only Toggle navigation
       %span.icon-bar.bar1
       %span.icon-bar.bar2
