chore: Clean up chore issues

--- a/views/users/user.haml
+++ b/views/users/user.haml
@@ -5,7 +5,7 @@
   .col-sm-9
     %select.form-control.border-input{ name: 'user[user_roles][]', id: 'user_user_roles', multiple: true }
       - ProxES::UserRole.role_names.each do |name|
-        %option{ value: name, selected: user.has_role?(name) }= name.titlecase
+        %option{ value: name, selected: user.role?(name) }= name.titlecase
   -if user.errors[:role]
     %p.help-block.text-danger
       = user.errors[:role].join(', ')
