chore: Extend and fix CRUD tests

--- a/views/user_roles/index.haml
+++ b/views/user_roles/index.haml
@@ -12,7 +12,7 @@
           -list.each do |entity|
             %tr
               %td
-                %a{ href: "/_proxes/users/#{entity.user.id}" }= entity.user.identity.first.username
+                %a{ href: "/_proxes/users/#{entity.user.id}" }= entity.user.identity&.first&.username
               %td
                 %a{ href: "/_proxes/user-roles/#{entity.id}" }= entity.role
       .panel-body.text-right
