--- a/views/layout.haml
+++ b/views/layout.haml
@@ -29,7 +29,7 @@
         .row
           .col-md-12
             -if defined? title
-              %h1.page-header= title
+              %h1= title
             = haml :'partials/notifications'
             = yield
         %footer.footer.text-muted.text-center
@@ -39,9 +39,9 @@
               &copy; <script>document.write(new Date().getFullYear())</script>, JadeIT
 
 
-    / Placed at the end of the document so the pages load faster
-    %script{ type: 'text/javascript', src: '/assets/js/bundle.js' }
-    %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/3.3.7+1/js/sb-admin-2.min.js' }
+    / Placed at the end of the document so the pages load faster    
     %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js' }
+    %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/3.3.7+1/js/sb-admin-2.min.js' }
     %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/metisMenu/2.5.2/metisMenu.min.js' }
     %script{ type: 'text/javascript', src: 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' }
+    %script{ type: 'text/javascript', src: '/_proxes/assets/app.js' }
