chore: Clean up views

--- a/views/getting_started.haml
+++ b/views/getting_started.haml
@@ -1,5 +1,5 @@
 .row
-  .col-sm-12
+  .col-md-12
     .panel.panel-success
       .panel-heading
         You can now start using this Elasticsearch cluster:
