--- a/views/identity/register.haml
+++ b/views/identity/register.haml
@@ -1,9 +1,9 @@
 .row
-  .col-sm-12
+  .col-md-12
     %h1 ProxES Registration
 .row
-  .col-sm-2
-  .col-sm-8
+  .col-md-2
+  .col-md-8
     .panel.panel-default
       .panel-heading
         ProxES Registration
@@ -14,4 +14,4 @@
           = form_control(:password_confirmation, identity, label: 'Confirm Password', type: :password)
 
           %button.btn.btn-primary{ type: 'submit' } Register
-  .col-sm-2
+  .col-md-2
