--- a/views/partials/navbar.haml
+++ b/views/partials/navbar.haml
@@ -11,6 +11,7 @@
       %span.icon-bar.bar3
   -if current_user
     %form.nav.navbar-top-links.navbar-form.navbar-right{ action: '/_proxes/auth/identity', method: 'post' }
+      %a.btn.btn-default{ href: "/_proxes/users/profile" } My Account
       %input{ name: '_method', value: 'DELETE', type: 'hidden' }
       %button.btn.btn-default{ type: 'submit' }
         / %i.ti-panel
