--- a/views/getting_started.haml
+++ b/views/getting_started.haml
@@ -7,14 +7,10 @@
         %h4 Send Data
         %pre
           :plain
-            curl -X POST 'http://proxes.co.za/#{ current_user.index_prefix}/test' \
-            -H 'Authorization: YourTokenHere' -d '{"message":"Get cracking!"}'
+            curl -X POST '#{ request.base_url }/#{ current_user.email }/test' \
+            -u #{ current_user.email }:yourpassword -d '{"message":"Get cracking!"}'
 
         %h4 Search
         %pre
-          curl -X GET 'http://proxes.co.za/#{ current_user.index_prefix}/_search' -H 'Authorization: YourTokenHere'
-
-        %form.text-center.lead{ method: 'post', action: '/tokens' }
-          No Token yet?
-          %button.btn.btn-primary{ type: 'submit' } Get One
+          curl -X GET '#{ request.base_url }/_search' -u #{ current_user.email }:yourpassword
 
