feat: Add pagination to the all index pages

--- a/views/audit_logs/index.haml
+++ b/views/audit_logs/index.haml
@@ -22,3 +22,5 @@
                 = entity.details
               %td
                 = entity.created_at.strftime('%Y-%m-%d %H:%M:%S')
+
+=pagination(list, base_path)
