--- a/views/permissions/index.haml
+++ b/views/permissions/index.haml
@@ -12,3 +12,5 @@
                   = entity.pattern
       .panel-body.text-right
         %a.btn.btn-primary{ href: '/_proxes/permissions/new' } New Permission
+
+=pagination(list, base_path)
