--- a/views/roles/index.haml
+++ b/views/roles/index.haml
@@ -15,3 +15,5 @@
                 = entity.permissions_dataset.count
       .panel-body.text-right
         %a.btn.btn-primary{ href: '/_proxes/roles/new' } New Role
+
+=pagination(list, base_path)
