refac: Clean up auth paths

--- a/views/identity/login.haml
+++ b/views/identity/login.haml
@@ -15,5 +15,5 @@
           %button.btn.btn-primary{ type: 'submit' } Log In
           .pull-right
             No account yet?
-            %a.btn.btn-default{ href: '/auth/identity/register' } Register
+            %a.btn.btn-default{ href: '/_proxes/auth/identity/register' } Register
   .col-sm-3
