--- a/views/partials/navbar.haml
+++ b/views/partials/navbar.haml
@@ -19,7 +19,7 @@
   - else
     %ul.nav.navbar-top-links.navbar-right
       %li
-        %a.btn.btn-link{ href: '/auth/identity' }
+        %a.btn.btn-link{ href: '/_proxes/auth/identity' }
           Log In
   .navbar-default.sidebar{ role: 'navigation' }
     = haml :'partials/sidebar'
