--- a/views/partials/sidebar.haml
+++ b/views/partials/sidebar.haml
@@ -12,11 +12,11 @@
             = item[:text]
   - else
     %li.active
-      %a{ href: '/auth/identity' }
+      %a{ href: '/_proxes/auth/identity' }
         %i.fa.fa-user.fa-fw
         Log In
     %li
-      %a{ href: '/auth/identity/register' }
+      %a{ href: '/_proxes/auth/identity/register' }
         %i.fa.fa-pencil-square-o.fa-fw
         Register
 
