chore: Icons and manifests

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,9 +4,12 @@
     %meta{ charset: 'utf-8' }
     %meta{ 'http-equiv' => 'X-UA-Compatible', 'content' => 'IE=edge,chrome=1' }
     %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1' }
-    %link{ rel: 'apple-touch-icon', sizes: '76x76', href: '/assets/img/apple-icon.png' }
+    %meta{ name: 'theme-color', content: '#ffffff' }
     %link{ rel: 'manifest', href: '/_proxes/manifest.json' }
-    %link{ rel: 'favicon', href: '/_proxes/favicon.ico' }
+    %link{ rel: 'icon', type: 'image/png', sizes: '32x32', href: '/_proxes/images/favicon-32x32.png' }
+    %link{ rel: 'icon', type: 'image/png', sizes: '16x16', href: '/_proxes/images/favicon-16x16.png' }
+    %link{ rel: 'apple-touch-icon', sizes: '76x76', href: '/_proxes/images/apple-icon.png' }
+    %link{ rel: 'mask-icon', href: '/safari-pinned-tab.svg', color: '#5bbad5' }
 
     %title
       ProxES
