--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,6 +5,8 @@
     %meta{ 'http-equiv' => 'X-UA-Compatible', 'content' => 'IE=edge,chrome=1' }
     %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1' }
     %link{ rel: 'apple-touch-icon', sizes: '76x76', href: '/assets/img/apple-icon.png' }
+    %link{ rel: 'manifest', href: '/_proxes/manifest.json' }
+    %link{ rel: 'favicon', href: '/_proxes/favicon.ico' }
 
     %title
       ProxES
