--- a/views/permissions/index.haml
+++ b/views/permissions/index.haml
@@ -8,16 +8,21 @@
             %th User
             %th Permission
         %tbody
-          -list.each do |entity|
+          - if list.count > 0
+            - list.all.each do |entity|
+              %tr
+                %td
+                  = entity.role ? entity.role.name : 'None'
+                %td
+                  = entity.user ? entity.user.username : 'None'
+                %td
+                  %a.btn-block{ href: "#{base_path}/#{entity.id}" }
+                    = entity.verb
+                    = entity.pattern
+          - else
             %tr
-              %td
-                = entity.role ? entity.role.name : 'None'
-              %td
-                = entity.user ? entity.user.username : 'None'
-              %td
-                %a.btn-block{ href: "#{base_path}/#{entity.id}" }
-                  = entity.verb
-                  = entity.pattern
+              %td.text-center{ colspan: 3 } No records
+
       - if policy(::ProxES::Permission).create?
         .panel-body.text-right
           %a.btn.btn-primary{ href: "#{base_path}/new" } New Permission
