--- a/views/search/index.haml
+++ b/views/search/index.haml
@@ -54,6 +54,7 @@
         %tbody
           - result['hits']['hits'].each do |row|
             %tr
+              - target = "#{row['_index']}#{row['_type']}#{row['_id']}".tr('._#', '')
               - if params[:fields]
                 - params[:fields].each do |field|
                   %td= row['_source'][field]
@@ -61,10 +62,10 @@
                 %td.path-column= "#{row['_index']}/#{row['_type']}/#{row['_id']}"
                 %td= JSON.generate row['_source']
               %td
-                %button.btn.btn-sm.btn-default{ type: 'button', :'data-toggle' => 'collapse', :'data-target' => "##{row['_index']}-#{row['_type']}-#{row['_id']}", :'aria-expanded' => 'false', :'aria-controls' => "#{row['_index']}-#{row['_type']}-#{row['_id']}"}
+                %button.btn.btn-sm.btn-default{ type: 'button', :'data-toggle' => 'collapse', :'data-target' => "##{target}", :'aria-expanded' => 'false', :'aria-controls' => target}
                   %i.fa.fa-plus
                   More
-            %tr.active.collapse{ id: "#{row['_index']}-#{row['_type']}-#{row['_id']}" }
+            %tr.active.collapse{ id: target }
               %td{ colspan: (params[:fields] ? params[:fields].count + 1 : 3) }
                 %pre= JSON.pretty_generate row['_source']
   - else
